fix: add text-overflow: ellipsis to sidebarItem div

--- a/src/components/SidebarItem.module.css
+++ b/src/components/SidebarItem.module.css
@@ -27,6 +27,9 @@
 
 .sidebarItem > div {
   margin-left: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .sidebarItem > div > .desc {
